@@ -103,6 +103,13 @@ Building distributions from samples
     :template: DistributionFactory.rst_t
 
     SkellamFactory
+
+    :template: class.rst_t
+
+    experimental.SmoothedUniformFactory
+
+    :template: DistributionFactory.rst_t
+
     StudentFactory
     TrapezoidalFactory
     TriangularFactory
