@@ -551,6 +551,7 @@ ot_pyinstallcheck_test (Skellam_std)
 ot_pyinstallcheck_test (SkellamFactory_std)
 ot_pyinstallcheck_test (SklarCopula_std)
 ot_pyinstallcheck_test (SmoothedUniform_std)
+ot_pyinstallcheck_test (SmoothedUniformFactory_std IGNOREOUT)
 ot_pyinstallcheck_test (SquaredNormal_std)
 ot_pyinstallcheck_test (Student_std)
 ot_pyinstallcheck_test (StudentCopula_std IGNOREOUT)
