@@ -7,6 +7,7 @@
 ==== Major changes ====
 
 ==== New classes ====
+ * SmoothedUniformFactory (openturns.experimental)
 
 ==== API changes ====
  * Removed deprecated Pagmo.setGenerationNumber
